<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".SoundActivity">

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/soundSeekBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButtonText"
        android:id="@+id/playButton"
        android:layout_below="@+id/soundSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="38dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pauseButtonText"
        android:id="@+id/pauseButton"
        android:layout_alignBaseline="@+id/playButton"
        android:layout_alignBottom="@+id/playButton"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopButtonText"
        android:id="@+id/stopButton"
        android:layout_alignBottom="@+id/pauseButton"
        android:layout_toRightOf="@+id/pauseButton"
        android:layout_toEndOf="@+id/pauseButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videoButtonText"
        android:id="@+id/videoButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songSwitch"
        android:id="@+id/songSwitch"
        android:layout_marginTop="43dp"
        android:checked="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/playButton"
        android:layout_toEndOf="@+id/playButton"/>

</RelativeLayout>
